if1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-wakaise/rustlings-wakaise/format_check)
error[E0308]: mismatched types
 --> src/lib.rs:7:34
  |
7 | pub fn bigger(a: i32, b: i32) -> i32 {
  |        ------                    ^^^ expected `i32`, found `()`
  |        |
  |        implicitly returns `()` as its body has no tail or `return` expression
  |
note: consider returning one of these bindings
 --> src/lib.rs:7:15
  |
7 | pub fn bigger(a: i32, b: i32) -> i32 {
  |               ^       ^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
